[Useful links] Fixed issue with images being stretched

--- a/resources/css/sass/components/templates/_components.template.useful-resources.scss
+++ b/resources/css/sass/components/templates/_components.template.useful-resources.scss
@@ -52,7 +52,6 @@
 
 		.o-flex__item {
 		    padding: 0;
-		    flex-grow: 1;
 		    flex-basis:  auto;
 		    border-radius: 4px;
 		    background: #FFFFFF;
